<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity3">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="-20dp"
        app:cardBackgroundColor="@color/white"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:orientation="vertical"
        >

    <TextView
        android:id="@+id/btPickDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/date1"
        android:gravity="center"
        android:padding="6dp"
        android:layout_marginLeft="6dp"
    android:layout_marginTop="16dp"
        />

<!--        <DatePicker-->
<!--            android:id="@+id/date_picker"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="12dp"/>-->
<!--        <TextView-->
<!--            android:id="@+id/date_selected_text_view"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="12dp"-->
<!--            android:text="Selected date:"/>-->

<!--        <Button-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/update_date_button"-->
<!--            android:text="Update Selected Date TextView"/>-->

        <LinearLayout
            android:id="@+id/llTrnsactionListByDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/border"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:padding="2dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="16dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/tab_main_text_1"/>

            <TextView
                android:id="@+id/tvTotalTransacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="6dp"
                android:text="0"/>
        </LinearLayout>
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/tab_main_text_2"/>
            <TextView
                android:id="@+id/tvTotalTransacionAmount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="6dp"
                android:text="0"/>
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="@color/white"
    app:cardMaxElevation="4dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:background="@color/purple_700"
            android:padding="4dp"
            android:gravity="center"
            android:text="@string/tab_text_1"/>
        <TextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:gravity="center"
            android:background="@color/white"
            android:padding="4dp"
            android:text="@string/tab_text_2"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight="0.8">
    <FrameLayout
        android:id="@+id/btImportFile"
        style="@style/framelayout"
        android:visibility="gone">
        <ImageView
            android:id="@+id/btImportFile1"
            android:src="@drawable/importimage"
            style="@style/image"/>
    </FrameLayout>
        <FrameLayout
            android:id="@+id/flListData"
            style="@style/framelayout"
            android:visibility="visible">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <EditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Search By Name"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:padding="10dp"
                android:layout_margin="10dp"/>
<!--                <Button-->
<!--                    android:id="@+id/btNext"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Next Scren"-->
<!--                    />-->
        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:id="@+id/recyclerView">
        </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btViewInfoData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="View Data"/>
    <TextView
        android:id="@+id/tvViewData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_700"
        app:srcCompat="@drawable/export2" />

</LinearLayout>